# test-sdl

./: .gitignore  CMakeLists.txt  README.md
src/: array.c  array.cpp  array.h  main.c  main.cpp  mesh.c  mesh.cpp  mesh.h  model.c  model.h  mymath.c  mymath.cpp  mymath.h  scene.cpp  scene.h  vertex.glsl
